# LeAgents

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  compose.yaml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
configs/: constitution.yaml  m0_libero.yaml  m0_libero_mini.yaml  m0_libero_scale.yaml  smoke_libero.yaml  smoke_pusht.yaml
docs/: DESIGN_phase2_residual_rl.md
knowledge/: KNOWLEDGE.md
knowledge/policies/: diffusion.md  smolvla.md
knowledge/tasks/: libero_spatial.md  pusht-v0.md
leagent/: __init__.py  cli.py  config.py
leagent/agents/: __init__.py  data_agent.py  eval_agent.py  improve_agent.py  knowledge_agent.py  train_agent.py
leagent/contracts/: __init__.py  records.py
leagent/dashboard/: server.py
leagent/dashboard/static/: index.html
leagent/events/: __init__.py
leagent/llm/: __init__.py  adapter.py
leagent/orchestrator/: __init__.py  decision.py  loop.py  proposer.py
leagent/scripts/: collect_rollouts.py
leagent/store/: __init__.py  jobstore.py
leagents/: __init__.py  cli.py  config.py  doctor.py
leagents/agents/: __init__.py  data_agent.py  eval_agent.py  improve_agent.py  knowledge_agent.py  train_agent.py
leagents/contracts/: __init__.py  records.py
leagents/dashboard/: server.py
leagents/dashboard/static/: index.html
leagents/demo/: __init__.py
leagents/demo/data/: events.jsonl  run.json
leagents/demo/data/knowledge/policies/: smolvla.md
leagents/events/: __init__.py  bus.py
leagents/llm/: __init__.py  adapter.py
leagents/orchestrator/: __init__.py  constitution.py  curation.py  decision.py  loop.py  proposer.py
leagents/rl/: __init__.py  composition.py  config.py  env_adapter.py  libero_driver.py  sac_wrappers.py  safety.py  train.py
leagents/scripts/: collect_rollouts.py  select_episodes.py  train_residual.py
leagents/store/: __init__.py  jobstore.py
leloop/: __init__.py  cli.py  config.py
leloop/agents/: __init__.py  base.py  data_agent.py  eval_agent.py  improve_agent.py  knowledge_agent.py  train_agent.py
leloop/contracts/: __init__.py  records.py
leloop/dashboard/: server.py
leloop/dashboard/static/: index.html
leloop/events/: __init__.py
leloop/llm/: __init__.py  adapter.py
leloop/orchestrator/: __init__.py  decision.py  loop.py  proposer.py
leloop/scripts/: collect_rollouts.py
leloop/store/: __init__.py  jobstore.py
notebooks/: quickstart_colab.ipynb
tests/: conftest.py  test_agents.py  test_cli.py  test_constitution.py  test_curation.py  test_dashboard.py  test_decision.py  test_demo.py  test_doctor.py  test_improve.py  test_knowledge.py  test_llm.py  test_llm_proposer.py  test_loop.py  test_residual_composition.py  test_residual_env.py  test_rl_safety.py  test_rl_train.py  test_select_episodes.py  test_store.py
