[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leloop"
version = "0.0.4"
description = "LeLoop — agentic orchestration for the LeRobot pipeline: collect -> train -> eval -> improve"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ratel" }]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# LeRobot moves fast (see DESIGN.md §6) — pin an exact version at install time.
lerobot = ["lerobot[smolvla,libero]>=0.5"]
dash = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "ruff>=0.4", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
leloop = "leloop.cli:main"

[tool.setuptools.packages.find]
include = ["leloop*"]

[tool.setuptools.package-data]
leloop = ["dashboard/static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
